<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Feedroll" Id="{89e12799-0395-4cb6-a023-eb1d46a476b9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//Feedroll_Analog_Input  AT %I*: INT;	//Analog Input as a percentage of the Analog Input Setting // 0-10V__0-100% 	
	//Use the callout to attach this variable to the analog input reading on the drive. 
	
	Feedroll_Closed_Input : BOOL;			//Switch on HMI to control the feedroll state.
	
	FeedRate_Feet_Per_Minute_Input : REAL := 100.0;	//Changing speed control to utilize a Ft/min input rather than a percentage. 

END_VAR

VAR_GLOBAL PERSISTENT
	Feedroll_Pressure_Output AT %Q* : UINT;
	Feedroll_Pressure_Input : REAL;			//Read from the HMI

	
	Feedroll_Analog_Input : REAL;			//HMI Control that sets the speed as a REAL Number. No conversion is needed in the PLC. All done through HMI.
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>